<resources>
    <string name="app_name">SvChat2</string>
    <string name="register_activity_title">Создать пользователя</string>
    <string name="hint_user_name">Имя пользователя</string>
    <string name="hint_password">Пароль</string>
    <string name="hint_email">Email</string>
    <string name="register_button_text">Создать</string>
    <string name="login_button_text">Войти</string>
    <string name="login_activity_title">Авторизация пользователя</string>
    <string name="start_activity_text">SvChat</string>
    <string name="action_logout">Выйти</string>
    <string name="avatar_username">username</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="blank_fragment_chats">Ваш чат</string>
    <string name="blank_fragment_users">Ваши пользователи</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="reset">Reset</string>
    <string name="your_email">Your Email</string>
    <string name="Forgot_you_password">Забыли пароль</string>
</resources>